# cis194

./: README.md  cis194.cabal  stack.yaml
src/: Calc.hs  Golf.hs  HW1.hs  HW4.hs  Log.hs  LogAnalysis.hs  Parser.hs
test/: CalcSpec.hs  GolfSpec.hs  HW1Spec.hs  HW4Spec.hs  LogAnalysisSpec.hs
