name:                   cis194
version:                0.0.0
license:                MIT
build-type:             Simple
cabal-version:          >= 1.18

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  exposed-modules:      HW1
                      , Log
                      , LogAnalysis
                      , Golf
                      , HW4
                      , ExprT
                      , Parser
                      , Calc
  build-depends:        base
                      , containers
                      , parsec

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , hspec
                      , cis194
                      , transformers
                      , QuickCheck
